<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">CLEAR</string>
    <string name="history">HISTORY</string>
    <string name="_0">0</string>
    <string name="x_square_root">√x</string>
    <string name="x_square">x^2</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="n_square_root">n√x</string>
    <string name="x_n_square">x^n</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="plus_minus">+/-</string>
    <string name="plus_or_minus">+/-</string>
    <string name="n_power">x^n</string>
    <string name="history_title">HISTORY</string>
</resources>